# el-montaje

./: MANIFEST.in  README.md  setup.cfg
src/el_montaje/: __main__.py  version.py
src/el_montaje/data/: logger.ini
