[metadata]
name = el-montaje
version = attr: el_montaje.version.__version__
url = https://github.com/sunarch/el-montaje
project_urls =
    Bug Tracker = https://github.com/sunarch/el-montaje/issues
author = András Németh (sunarch)
author_email = sunarch@protonmail.com
maintainer = András Németh (sunarch)
maintainer_email = sunarch@protonmail.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Operating System :: OS Independent
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    Topic :: Software Development
    Topic :: Software Development :: Interpreters
    Typing :: Typed
license = Mozilla Public License 2.0 (MPL 2.0)
description = EL montaje - An esolang with an assembly-like syntax
long_description = file: README.md
long_description_content_type = text/markdown
keywords = el montaje, esolang, assembly
platforms = Any

[options]
python_requires = >=3.9
packages = find:
package_dir =
    = src
scripts =
    bin/el-montaje

[options.entry_points]
console_scripts =
    el-montaje = el_montaje.__main__:main

[options.packages.find]
where = src

[options.package_data]
    el_montaje = data/logger.ini
